RESOLVED FIXED316292
REGRESSION: Inserting a space sometimes doesn't work in 2-Set Korean
https://bugs.webkit.org/show_bug.cgi?id=316292
Summary REGRESSION: Inserting a space sometimes doesn't work in 2-Set Korean
Ryosuke Niwa
Reported 2026-06-04 01:24:51 PDT
Typing in "tmfmf " inserts just "스를" and loses the trailing whitespace.
Attachments
Ryosuke Niwa
Comment 1 2026-06-04 01:36:20 PDT
EWS
Comment 2 2026-06-04 15:52:58 PDT
Committed 314586@main (d8b72b35b624): <https://commits.webkit.org/314586@main> Reviewed commits have been landed. Closing PR #66438 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-06-04 15:53:11 PDT
Note You need to log in before you can comment on or make changes to this bug.