REGRESSION: Inserting a space sometimes doesn't work in 2-Set Korean https://bugs.webkit.org/show_bug.cgi?id=316292

Reviewed by Wenson Hsieh.

With InputMethodUsesCorrectKeyEventOrder enabled, 2-Set Korean's insertText: "한"
(fired as a side effect of committing the composition on space press) gets queued into
commands rather than dispatched directly. This sets hasInsertText = true, which blocked
the keyboard-layout pass from appending insertText: " " (the space).

With InputMethodUsesCorrectKeyEventOrder disabled, the insertText: is dispatched directly,
leaving commands empty with hasInsertText = false, so the space is always appended.

This PR fixes the regression by tracking whether input method has fully handled the key
event or not before forced-to-No logic kicks for inputMethodCommittedPartialInsertText.

Test: TestWebKitAPI.WKWebViewMacEditingTests.ModelessInputMethodCommitOnDelimiterInsertsCommittedTextAndDelimiter

* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::interpretKeyEvent):
* Tools/Scripts/webkitpy/api_tests/allowlist.txt:
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/mac/WKWebViewMacEditingTests.mm:
(-[MockTextInputContextAction initWithMarkedText:selectedRange:replacementRange:]):
(-[MockTextInputContextAction initWithInsertText:replacementRange:]):
(-[MockTextInputContext handleEventByInputMethod:completionHandler:]):
(TestWebKitAPI::TEST(WKWebViewMacEditingTests, ModelessInputMethodStagingToleratesExternalSetMarkedText)):
(TestWebKitAPI::TEST(WKWebViewMacEditingTests, ModelessInputMethodCommitOnDelimiterInsertsCommittedTextAndDelimiter)):

Canonical link: https://commits.webkit.org/314586@main